--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -38,6 +38,7 @@ found in the LICENSE file.
     'importer/linux_perf/workqueue_parser_test.html',
     'importer/timeline_stream_importer_test.html',
     'importer/trace_event_importer_test.html',
+    'importer/v8_log_importer_test.html',
     'profiling_view_test.html',
     'selection_test.html',
     'timeline_test.html',
@@ -59,7 +60,6 @@ found in the LICENSE file.
     'analysis/slice_group_selection_analysis_test.html',
     'analysis/single_counter_selection_analysis_test.html',
     'analysis/single_slice_selection_analysis_test.html',
-    'v8_log_importer_test.html',
   ];
 </script>
 <style>
