Fixup test file name for ruler rename

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -53,7 +53,7 @@ found in the LICENSE file.
     'tracks/slice_group_track_test.html',
     'tracks/slice_track_test.html',
     'tracks/thread_track_test.html',
-    'tracks/viewport_track_test.html',
+    'tracks/ruler_track_test.html',
     'analysis/counter_selection_analysis_test.html',
     'analysis/selection_analysis_test.html',
     'analysis/slice_selection_analysis_test.html',
