systrace: Reintroduce disk tracing support.
BUG=141

Review URL: https://codereview.appspot.com/8061043

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -28,6 +28,7 @@ found in the LICENSE file.
     'importer/linux_perf/bus_parser_test.html',
     'importer/linux_perf/clock_parser_test.html',
     'importer/linux_perf/cpufreq_parser_test.html',
+    'importer/linux_perf/disk_parser_test.html',
     'importer/linux_perf/drm_parser_test.html',
     'importer/linux_perf/exynos_parser_test.html',
     'importer/linux_perf/gesture_parser_test.html',
