--- a/trunk/src/tracks/cpu_track_test.html
+++ b/trunk/src/tracks/cpu_track_test.html
@@ -24,9 +24,9 @@ found in the LICENSE file.
 <script>
   'use strict';
 
-  var Cpu = tracing.Cpu;
+  var Cpu = tracing.model.Cpu;
   var CpuTrack = tracing.tracks.CpuTrack;
-  var Slice = tracing.Slice;
+  var Slice = tracing.model.Slice;
   var Viewport = tracing.TimelineViewport;
 
   function testBasicCpu() {
