--- a/trunk/src/find_control_test.html
+++ b/trunk/src/find_control_test.html
@@ -192,7 +192,7 @@ found in the LICENSE file.
       var model = new tracing.Model();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
-      t1.pushSlice(new tracing.ThreadSlice('', 'a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.model.ThreadSlice('', 'a', 0, 1, {}, 3));
 
       var timeline = new tracing.Timeline();
       timeline.model = model;
