--- a/trunk/src/model/process_base_test.html
+++ b/trunk/src/model/process_base_test.html
@@ -7,7 +7,7 @@ found in the LICENSE file.
 -->
 <head>
 <title>ProcessBase tests</title>
-<script src="base.js"></script>
+<script src="/src/base.js"></script>
 <script>
   base.require('unittest');
   base.require('test_utils');
