--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -9,20 +9,30 @@ found in the LICENSE file.
 <title>All Tracing Tests</title>
 <script>
   tests = [
-    'unittest_test.html',
-    'overlay_test.html',
-    'range_test.html',
-    'process_base_test.html',
-    'async_slice_group_test.html',
-    'find_control_test.html',
-    'slice_group_test.html',
-    'thread_test.html',
-    'process_test.html',
     'category_filter_dialog_test.html',
-    'counter_test.html',
-    'cpu_test.html',
     'filter_test.html',
+    'find_control_test.html',
+    'overlay_test.html',
+    'profiling_view_test.html',
+    'range_test.html',
+    'selection_test.html',
+    'settings_test.html',
+    'timeline_analysis_view_test.html',
+    'timeline_test.html',
+    'timeline_view_test.html',
+    'timeline_viewport_test.html',
+    'ui_test.html',
+    'unittest_test.html',
+
     'model_test.html',
+    'model/async_slice_group_test.html',
+    'model/counter_test.html',
+    'model/cpu_test.html',
+    'model/process_base_test.html',
+    'model/process_test.html',
+    'model/slice_group_test.html',
+    'model/thread_test.html',
+
     'importer/linux_perf_importer_test.html',
     'importer/linux_perf/android_parser_test.html',
     'importer/linux_perf/bus_parser_test.html',
@@ -40,14 +50,7 @@ found in the LICENSE file.
     'importer/timeline_stream_importer_test.html',
     'importer/trace_event_importer_test.html',
     'importer/v8_log_importer_test.html',
-    'profiling_view_test.html',
-    'selection_test.html',
-    'timeline_test.html',
-    'timeline_analysis_view_test.html',
-    'timeline_view_test.html',
-    'timeline_viewport_test.html',
-    'ui_test.html',
-    'settings_test.html',
+
     'tracks/async_slice_group_track_test.html',
     'tracks/cpu_track_test.html',
     'tracks/counter_track_test.html',
@@ -55,6 +58,7 @@ found in the LICENSE file.
     'tracks/slice_track_test.html',
     'tracks/thread_track_test.html',
     'tracks/ruler_track_test.html',
+
     'analysis/counter_selection_analysis_test.html',
     'analysis/selection_analysis_test.html',
     'analysis/slice_selection_analysis_test.html',
