--- a/trunk/src/timeline_analysis_view_test.html
+++ b/trunk/src/timeline_analysis_view_test.html
@@ -36,8 +36,8 @@ found in the LICENSE file.
   <script>
     'use strict';
 
-    var Counter = tracing.Counter;
-    var Thread = tracing.Thread;
+    var Counter = tracing.model.Counter;
+    var Thread = tracing.model.Thread;
     var AnalysisView = tracing.TimelineAnalysisView;
     var Model = tracing.Model;
     var ThreadTrack = tracing.tracks.ThreadTrack;
