--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -44,8 +44,8 @@ found in the LICENSE file.
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
 
-      t1.pushSlice(new tracing.ThreadSlice('', 'a', 0, 1, {}, 3));
-      t1.pushSlice(new tracing.ThreadSlice('', 'b', 0, 1.1, {}, 2.8));
+      t1.pushSlice(new tracing.model.ThreadSlice('', 'a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.model.ThreadSlice('', 'b', 0, 1.1, {}, 2.8));
 
       var t1asg = t1.asyncSlices;
       t1asg.slices.push(test_utils.newAsyncSliceNamed('a', 0, 1, t1, t1));
