--- a/trunk/src/tracks/counter_track_test.html
+++ b/trunk/src/tracks/counter_track_test.html
@@ -23,7 +23,7 @@ found in the LICENSE file.
 <script>
   'use strict';
 
-  var Counter = tracing.Counter;
+  var Counter = tracing.model.Counter;
   var Viewport = tracing.TimelineViewport;
   var CounterTrack = tracing.tracks.CounterTrack;
 
