--- a/trunk/src/tracks/slice_track_test.html
+++ b/trunk/src/tracks/slice_track_test.html
@@ -16,7 +16,7 @@ found in the LICENSE file.
 <script>
   base.require('unittest');
   base.require('test_utils');
-  base.require('slice');
+  base.require('model.slice');
   base.require('timeline');
 </script>
 </head>
@@ -26,7 +26,7 @@ found in the LICENSE file.
 
   var Selection = tracing.Selection;
   var SliceTrack = tracing.tracks.SliceTrack;
-  var Slice = tracing.Slice;
+  var Slice = tracing.model.Slice;
   var Viewport = tracing.TimelineViewport;
 
   function testBasicSlices() {
