--- a/trunk/src/timeline_analysis_view_test.html
+++ b/trunk/src/timeline_analysis_view_test.html
@@ -31,7 +31,7 @@ found in the LICENSE file.
     base.require('tracks.counter_track');
     base.require('tracks.slice_track');
     base.require('tracks.thread_track');
-    base.require('timeline'); /* TODO(nduca): reduce dependency */
+    base.require('timeline_track_view'); /* TODO(nduca): reduce dependency */
   </script>
   <script>
     'use strict';
