--- a/trunk/src/find_control_test.html
+++ b/trunk/src/find_control_test.html
@@ -194,7 +194,7 @@ found in the LICENSE file.
       var t1 = p1.getOrCreateThread(1);
       t1.pushSlice(new tracing.model.ThreadSlice('', 'a', 0, 1, {}, 3));
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       var controller = new tracing.FindController();
