--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -11,7 +11,7 @@ found in the LICENSE file.
 <script>
   base.require('unittest');
   base.require('test_utils');
-  base.require('timeline');
+  base.require('timeline_track_view');
   base.require('importer.trace_event_importer');
 </script>
 </head>
@@ -31,7 +31,7 @@ found in the LICENSE file.
         {name: 'b', args: {}, pid: 52, ts: 631, cat: 'foo', tid: 53, ph: 'E'}
       ];
       var model = new tracing.Model(events);
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
       timeline.focusElement = timeline;
       timeline.tabIndex = 0;
@@ -51,7 +51,7 @@ found in the LICENSE file.
       t1asg.slices.push(test_utils.newAsyncSliceNamed('a', 0, 1, t1, t1));
       t1asg.slices.push(test_utils.newAsyncSliceNamed('b', 1, 2, t1, t1));
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       var expected = [{slice: t1asg.slices[0].subSlices[0]},
@@ -78,7 +78,7 @@ found in the LICENSE file.
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       assertEquals(0, timeline.numVisibleTracks);
@@ -100,7 +100,7 @@ found in the LICENSE file.
       var p1 = model.getOrCreateProcess(1);
       p1.getOrCreateCounter('', 'a').samples = [1];
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       assertEquals(2, timeline.numVisibleTracks);
@@ -122,7 +122,7 @@ found in the LICENSE file.
       var c1 = model.getOrCreateCpu(1);
       c1.getOrCreateCounter('', 'a');
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       assertEquals(1, timeline.numVisibleTracks);
@@ -145,7 +145,7 @@ found in the LICENSE file.
       var p1 = model.getOrCreateProcess(1);
       p1.getOrCreateCounter('', 'a');
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       assertEquals(1, timeline.numVisibleTracks);
@@ -169,7 +169,7 @@ found in the LICENSE file.
       var t1 = p1.getOrCreateThread(2);
       t1.pushSlice(test_utils.newSlice(0, 1));
 
-      var timeline = new tracing.Timeline();
+      var timeline = new tracing.TimelineTrackView();
       timeline.model = model;
 
       assertEquals(1, timeline.numVisibleTracks);
