--- a/trunk/src/tracks/slice_track_test.html
+++ b/trunk/src/tracks/slice_track_test.html
@@ -17,7 +17,7 @@ found in the LICENSE file.
   base.require('unittest');
   base.require('test_utils');
   base.require('model.slice');
-  base.require('timeline');
+  base.require('timeline_track_view');
 </script>
 </head>
 <body>
