--- a/trunk/src/tracks/thread_track_test.html
+++ b/trunk/src/tracks/thread_track_test.html
@@ -16,7 +16,7 @@ found in the LICENSE file.
 <script>
   base.require('unittest');
   base.require('test_utils');
-  base.require('timeline');
+  base.require('timeline_track_view');
   base.require('tracks.thread_track');
 </script>
 </head>
