Add support for kernel function traces.
This change adds support for parsing the kernel function entry/return events
'graph_ent' and 'graph_ret'.  It also includes a way of dealing with the fact
that because userland tracing is done by writing to a /sys/ file, the kernel
and userland call tracing may not nest properly.

Review URL: https://codereview.appspot.com/7888046

--- a/trunk/src/model/process_base_test.html
+++ b/trunk/src/model/process_base_test.html
@@ -11,7 +11,7 @@ found in the LICENSE file.
 <script>
   base.require('unittest');
   base.require('test_utils');
-  base.require('process_base');
+  base.require('model.process_base');
 </script>
 </head>
 <body>
