--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -43,6 +43,7 @@ found in the LICENSE file.
     'importer/linux_perf/exynos_parser_test.html',
     'importer/linux_perf/gesture_parser_test.html',
     'importer/linux_perf/i915_parser_test.html',
+    'importer/linux_perf/kfunc_parser_test.html',
     'importer/linux_perf/mali_parser_test.html',
     'importer/linux_perf/power_parser_test.html',
     'importer/linux_perf/sched_parser_test.html',
