Handle Compound Categories.
With various flags enabled it is possible to get a "cc,devtools" trace
event category. This breaks the negation logic as we end up sending
"-cc,devtools" and matching almost nothing.

With this patch, we split all the categories coming into trace viewer on
the ',' and handle them as seperate categories. If the user has "cc,devtools"
in their settings already we then drop any category with a ',' in the name
when we build the category negation list.

This has the one side effect that you can no longer disable the "cc,devtools"
category as it doesn't seem to be matched if you disable "cc" or "devtools".

BUG=http://crbug.com/231608

Review URL: https://codereview.appspot.com/8767044

--- a/trunk/src/profiling_view_test.html
+++ b/trunk/src/profiling_view_test.html
@@ -184,6 +184,35 @@ found in the LICENSE file.
       assertEquals('-renderer,-skia', categories);
     }
 
+    function testBadCategories() {
+      var view = new tracing.ProfilingView();
+      view.timelineView_.settings.set('foo,bar', 'false', 'record_categories');
+
+      var tracingController = new FakeTracingController();
+      view.tracingController = tracingController;
+
+      view.querySelector('button.record').click();
+      assertTrue(tracingController.wasCollectCategoriesCalled);
+
+      var e = new base.Event('categoriesCollected');
+      e.categories = ['baz,zap', 'gpu'];
+      tracingController.dispatchEvent(e);
+
+      view.categorySelectionDialog_.querySelector(
+          'button.record-categories').click();
+
+      var inputs = view.categorySelectionDialog_.querySelectorAll('input');
+      var inputs_length = inputs.length;
+      for (var i = 0; i < inputs_length; ++i) {
+        // Comes from categories and should be split before getting
+        // to the category selection dialog.
+        assertNotEquals('baz,zap', inputs[i].id);
+      }
+
+      var categories = tracingController.beginTracingCategories;
+      assertEquals('', categories);
+    }
+
     function testRecordNonCros() {
       var old = base.isChromeOS;
       base.isChromeOS = false;
