Add ObjectInstanceSnapshot primitives
This is the first in a series of patches to make cc-frame-viewer a first-class part of about:tracing.

This patch create infrastructure in the model for tracking objects in a trace as they vary through time.

Think about the following C++ code:
   HeapInteger* i = new HeapInteger(); // assume it is 0x1000
   i->SetValue(3);
   TRACE_EVENT_IMMEDIATE1("cat", "i", i->AsValue()); // assume Time::now=10
   i->SetValue(4);
   TRACE_EVENT_IMMEDIATE1("cat", "i", i->AsValue()); // assume Time::now=20

In the model, we represent a trace of this as an ObjectInstance 0x1000, named "i", which has two snapshots, one at ts=10 and one at ts=20.

Suppose now at Time::now=50, we delete i, and create some totally different 'j' object. But, the raw pointer that we get back is the same exact 0x1000 pointer. In the model, this gets represented by a TimeToInstanceMap for 0x1000, where from 10 to 50, 0x1000 maps to the ObjectInstance 0x1000 for I, but from 50 onward, 0x1000 maps to J.

ObjectCollection is just a 2d map of the universe of objects and their snapshots, indexed by id and timestamp.

Review URL: https://codereview.appspot.com/8928043

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!--
-Copyright (c) 2012 The Chromium Authors. All rights reserved.
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
 Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
@@ -17,6 +17,7 @@ found in the LICENSE file.
     'range_test.html',
     'selection_test.html',
     'settings_test.html',
+    'sorted_array_utils_test.html',
     'timeline_analysis_view_test.html',
     'timeline_test.html',
     'timeline_view_test.html',
@@ -28,10 +29,13 @@ found in the LICENSE file.
     'model/async_slice_group_test.html',
     'model/counter_test.html',
     'model/cpu_test.html',
+    'model/object_collection_test.html',
+    'model/object_instance_test.html',
     'model/process_base_test.html',
     'model/process_test.html',
     'model/slice_group_test.html',
     'model/thread_test.html',
+    'model/time_to_object_instance_map_test.html',
 
     'importer/linux_perf_importer_test.html',
     'importer/linux_perf/android_parser_test.html',
