--- a/trunk/src/tracks/counter_track_test.html
+++ b/trunk/src/tracks/counter_track_test.html
@@ -6,7 +6,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 <head i18n-values="dir:textdirection;">
-<title>Track tests</title>
+<title>Counter Track tests</title>
 <style>
 .container {
   border: 1px solid red;
