--- a/trunk/src/model/object_collection_test.html
+++ b/trunk/src/model/object_collection_test.html
@@ -25,6 +25,10 @@ found in the LICENSE file.
     collection.addSnapshot(
       '0x1000', 'cat', 'Frame', 20, {foo: 2});
 
+    collection.updateBounds();
+    assertEquals(10, collection.bounds.min);
+    assertEquals(20, collection.bounds.max);
+
     var s0 = collection.getSnapshot('0x1000', 1)
     assertUndefined(s0);
 
@@ -44,6 +48,24 @@ found in the LICENSE file.
   }
 
 
+  function testCreateSnapDelete() {
+    var collection = new tracing.model.ObjectCollection({});
+    collection.idWasCreated(
+      '0x1000', 'cat', 'Frame', 10);
+    collection.addSnapshot(
+      '0x1000', 'cat', 'Frame', 10, {foo: 1});
+    collection.idWasDeleted(
+      '0x1000', 'cat', 'Frame', 15);
+
+    collection.updateBounds();
+    assertEquals(10, collection.bounds.min);
+    assertEquals(15, collection.bounds.max);
+
+    var s10 = collection.getSnapshot('0x1000', 10);
+    var i10 = s10.objectInstance;
+    assertEquals(10, i10.creationTs);
+    assertEquals(15, i10.deletionTs);
+  }
 </script>
 </body>
 </html>
