Allow TimeToObjectInstanceMap to vend different object types
The TimeToObjectMap incorrectly assumed that all the objects vended from it
were of the same type. This patch moves id and parent to the map, but makes
name and category arguments on the idCreated/addSnapshot/idDeleted calls. This
allows, for example, a Frame and Picture with id=0x1000 to be correctly stored
within the map [at different times].

--- a/trunk/src/importer/trace_event_importer_test.html
+++ b/trunk/src/importer/trace_event_importer_test.html
@@ -882,7 +882,7 @@ function testImportSimpleObject() {
   var p = m.processes[1];
   assertNotUndefined(p);
 
-  var i10 = p.objects.getSnapshot('0x1000', 15).objectInstance;
+  var i10 = p.objects.getObjectInstanceAt('0x1000', 10);
   assertEquals('c', i10.category);
   assertEquals(10, i10.creationTs);
   assertEquals(50, i10.deletionTs);
