--- a/trunk/src/model/object_collection_test.html
+++ b/trunk/src/model/object_collection_test.html
@@ -29,24 +29,43 @@ found in the LICENSE file.
     assertEquals(10, collection.bounds.min);
     assertEquals(20, collection.bounds.max);
 
-    var s0 = collection.getSnapshot('0x1000', 1)
+    var s0 = collection.getSnapshotAt('0x1000', 1)
     assertUndefined(s0);
 
-    var s1 = collection.getSnapshot('0x1000', 10)
+    var s1 = collection.getSnapshotAt('0x1000', 10)
     assertEquals(s1.args.foo, 1);
 
-    var s2 = collection.getSnapshot('0x1000', 15)
+    var s2 = collection.getSnapshotAt('0x1000', 15)
     assertEquals(s2.args.foo, 1);
     assertEquals(s1, s2);
 
-    var s3 = collection.getSnapshot('0x1000', 20)
+    var s3 = collection.getSnapshotAt('0x1000', 20)
     assertEquals(s3.args.foo, 2);
     assertEquals(s1.object, s3.object);
 
-    var s4 = collection.getSnapshot('0x1000', 25)
+    var s4 = collection.getSnapshotAt('0x1000', 25)
     assertEquals(s4, s3);
   }
 
+  function testTwoObjectsSharingOneID() {
+    var collection = new tracing.model.ObjectCollection({});
+    collection.idWasCreated(
+      '0x1000', 'cc', 'Frame', 10);
+    collection.idWasDeleted(
+      '0x1000', 'cc', 'Frame', 15);
+    collection.idWasCreated(
+      '0x1000', 'skia', 'Picture', 20);
+    collection.idWasDeleted(
+      '0x1000', 'skia', 'Picture', 25);
+
+    var frame = collection.getObjectInstanceAt('0x1000', 10);
+    assertEquals('cc', frame.category);
+    assertEquals('Frame', frame.name);
+
+    var picture = collection.getObjectInstanceAt('0x1000', 20);
+    assertEquals('skia', picture.category);
+    assertEquals('Picture', picture.name);
+  }
 
   function testCreateSnapDelete() {
     var collection = new tracing.model.ObjectCollection({});
@@ -61,7 +80,7 @@ found in the LICENSE file.
     assertEquals(10, collection.bounds.min);
     assertEquals(15, collection.bounds.max);
 
-    var s10 = collection.getSnapshot('0x1000', 10);
+    var s10 = collection.getSnapshotAt('0x1000', 10);
     var i10 = s10.objectInstance;
     assertEquals(10, i10.creationTs);
     assertEquals(15, i10.deletionTs);
