--- a/trunk/src/tracks/slice_track_test.html
+++ b/trunk/src/tracks/slice_track_test.html
@@ -99,19 +99,23 @@ found in the LICENSE file.
     track.viewport.xSetWorldBounds(0, wW, vW * pixelRatio);
 
     var selection = new Selection();
-    track.addIntersectingItemsToSelection((1.5/wW)*vW, y, selection);
+    var x = (1.5/wW)*vW;
+    track.addIntersectingItemsInRangeToSelection(x, x + 1, y, y + 1, selection);
     assertEquals(track.slices[0], selection[0].slice);
 
     var selection = new Selection();
-    track.addIntersectingItemsToSelection((2/wW)*vW, y, selection);
+    x = (2.1/wW)*vW;
+    track.addIntersectingItemsInRangeToSelection(x, x + 1, y, y + 1, selection);
     assertEquals(0, selection.length);
 
     var selection = new Selection();
-    track.addIntersectingItemsToSelection((6.8/wW)*vW, y, selection);
+    x = (6.8/wW)*vW;
+    track.addIntersectingItemsInRangeToSelection(x, x + 1, y, y + 1, selection);
     assertEquals(track.slices[1], selection[0].slice);
 
     var selection = new Selection();
-    track.addIntersectingItemsToSelection((9.9/wW)*vW, y, selection);
+    x = (9.9/wW)*vW
+    track.addIntersectingItemsInRangeToSelection(x, x + 1, y, y + 1, selection);
     assertEquals(0, selection.length);
   }
 
