--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -59,6 +59,7 @@ found in the LICENSE file.
     'tracks/async_slice_group_track_test.html',
     'tracks/cpu_track_test.html',
     'tracks/counter_track_test.html',
+    'tracks/object_instance_track_test.html',
     'tracks/slice_group_track_test.html',
     'tracks/slice_track_test.html',
     'tracks/thread_track_test.html',
