--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -36,6 +36,7 @@ body {
 <link rel="stylesheet" href="tracks/canvas_based_track.css">
 <link rel="stylesheet" href="tracks/slice_track.css">
 <link rel="stylesheet" href="tracks/counter_track.css">
+<link rel="stylesheet" href="tracks/object_instance_track.css">
 <link rel="stylesheet" href="tracks/thread_track.css">
 <link rel="stylesheet" href="tracks/model_track.css">
 <link rel="stylesheet" href="tracks/ruler_track.css">
