--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -50,15 +50,15 @@ found in the LICENSE file.
               new tracing.model.Slice('foo', 'a', 0, startTime, {}, 1));
           thread.slices.push(
               new tracing.model.Slice('bar', 'b', 0,
-                                        startTime + 1.15, {}, .5));
+                                        startTime + 23, {}, 10));
         } else {
           var thread = process.getOrCreateThread('Name');
           thread.slices.push(
               new tracing.model.Slice('foo', 'a', 0,
-                                        startTime + .17, {}, .55));
+                                        startTime + 4, {}, 11));
           thread.slices.push(
               new tracing.model.Slice('bar', 'b', 0,
-                                        startTime + 1.1, {}, .7));
+                                        startTime + 22, {}, 14));
         }
       }
       var p1000 = model.getOrCreateProcess(1000);
