--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -63,14 +63,7 @@ found in the LICENSE file.
     'tracks/slice_group_track_test.html',
     'tracks/slice_track_test.html',
     'tracks/thread_track_test.html',
-    'tracks/ruler_track_test.html',
-
-    'analysis/counter_selection_analysis_test.html',
-    'analysis/selection_analysis_test.html',
-    'analysis/slice_selection_analysis_test.html',
-    'analysis/slice_group_selection_analysis_test.html',
-    'analysis/single_counter_selection_analysis_test.html',
-    'analysis/single_slice_selection_analysis_test.html',
+    'tracks/ruler_track_test.html'
   ];
 </script>
 <style>
