Split out counter and slice analysis and add basic object analysis.

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -41,6 +41,7 @@ body {
 <link rel="stylesheet" href="tracks/model_track.css">
 <link rel="stylesheet" href="tracks/ruler_track.css">
 <link rel="stylesheet" href="timeline_track_view.css">
+<link rel="stylesheet" href="analysis/slice_analysis.css">
 <link rel="stylesheet" href="timeline_analysis_view.css">
 <link rel="stylesheet" href="overlay.css">
 <link rel="stylesheet" href="timeline_view.css">
