--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -63,7 +63,10 @@ found in the LICENSE file.
     'tracks/slice_group_track_test.html',
     'tracks/slice_track_test.html',
     'tracks/thread_track_test.html',
-    'tracks/ruler_track_test.html'
+    'tracks/ruler_track_test.html',
+
+    'analysis/counter_analysis_test.html',
+    'analysis/slice_analysis_test.html',
   ];
 </script>
 <style>
