Clicking slice groups and objects in analysis view causes a selection change.

--- a/trunk/src/tracing/timeline_view_test.html
+++ b/trunk/src/tracing/timeline_view_test.html
@@ -6,7 +6,7 @@ Use of this source code is governed by a BSD-style license that can be
 found in the LICENSE file.
 -->
 <head>
-<title>iew tests</title>
+<title>TimelineView tests</title>
 <script src="/src/base.js"></script>
 </head>
 <body>
